# eos-be

./: .dockerignore  .env.example  .gitignore  Dockerfile  NEXT_STEPS.md  README.md  SOMA_FOLLOW_UP_STATUS.md  SYNAPSE_AUDIT.md  SYNAPSE_TRIAGE.md  approve_mutation.py  check_balance.py  check_streams.py  cloudbuild.yaml  collated-ecodiaos-py.txt  config.py  docker-compose.dev.yaml  docker-compose.yaml  examplenv.env  fix_axon_dicts.py  fix_no_untyped.py  genesis_trigger.py  main.py  nuke_stream.py  phantom_recon.py  pyproject.toml  run_hunter.py  run_inspector.py  server.js  test_economic_mutation.py  test_hello_world.py  tier2_orchestrator.py  triad_simulator.py  trigger_reload.py
cli/: __main__.py  evaluate.py  observatory.py  simula.py  training_data.py  training_run.py
clients/: browser_client.py  captcha_client.py  context_compression.py  email_client.py  file_watcher.py  llm.py  model_hotswap.py  neo4j.py  optimized_llm.py  scheduler.py  web_client.py
config/: default.yaml  local.yaml
core/: CLAUDE.md  continuous_learning_orchestrator.py  crash_pattern_analyzer.py  helpers.py  hot_deploy.py  infra.py  inner_life.py  interoception_loop.py  re_evaluator.py  re_training_exporter.py  registry.py  scheduled_tasks.py  wiring.py
data/: wallet_seed.json
database/: migrations.py
docs/: DISTILLED_OPTIMIZATION_SUMMARY.md  LLM_COST_OPTIMIZATION.md  LLM_INTEGRATION_GUIDE.md  LLM_OPTIMIZATION_README.md  OPTIMIZATION_FLOW_DIAGRAM.md
ecodiaos/: config.py  main.py  simula_worker.py
observatory/: __init__.py  closure_tracker.py  learning_coherence.py  spec_checker.py  tracer.py
primitives/: __init__.py  affect.py  blockchain.py  causal.py  closure.py  common.py  constitutional.py  evolution.py  evolutionary.py  experimental.py  (+14 more)
(+986 files in other folders)
