[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecodiaos"
version = "0.1.0"
description = "EcodiaOS — A living digital organism"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "boto3>=1.26.0",

    "httpx>=0.28.0",

    # Configuration
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",

    # Database clients
    "neo4j>=5.27.0",
    "asyncpg>=0.30.0",
    "redis[hiredis]>=5.2.0",

    # LLM providers
    "anthropic>=0.42.0",
    "openai>=1.60.0",
    "boto3>=1.26.0",  # AWS Bedrock support

    # Embeddings
    "sentence-transformers>=3.4.0",
    "numpy>=2.2.0",

    # Logging & observability
    "structlog>=24.4.0",
    "orjson>=3.10.0",

    # Cryptography (Federation identity)
    "cryptography>=44.0.0",

    # Utilities
    "python-ulid>=3.0.0",

    # Stage 2B: Z3 SMT solver for invariant verification
    "z3-solver>=4.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "testcontainers[neo4j]>=4.10.0",
    # Stage 2C: Static analysis tools
    "bandit>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ecodiaos"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
